# vhdl-fmt

./: .clang-format  .clang-tidy  .clangd  .codebook.toml  .cspell.yaml  .cspell_ignored  .gitignore  .rustfmt.toml  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  clang.profile  combined_output.txt  conanfile.txt  create_single_file.py  docker-compose.yaml  formatted.vhd  test_component.vhd  test_library.vhd  tmp.vhd
src/: CMakeLists.txt  config.rs  lib.rs  main.cpp  main.rs
src/ast/: CMakeLists.txt  node.hpp  visitor.hpp
src/ast/nodes/: declarations.hpp  design_file.hpp  design_units.hpp  expressions.hpp  statements.hpp  types.hpp
src/ast/nodes/declarations/: interface.hpp  objects.hpp  subprogram.hpp
src/ast/nodes/statements/: concurrent.hpp  sequential.hpp  waveform.hpp
src/builder/: CMakeLists.txt  ast_builder.cpp  ast_builder.hpp  node_builder.hpp  translator.hpp  verifier.hpp
src/builder/translators/: translator_concurrent.cpp  translator_control_flow.cpp  translator_declaration.cpp  translator_expr_composites.cpp  translator_expr_names.cpp  translator_expr_operators.cpp  translator_sequential.cpp  translator_subprogram.cpp  translator_type.cpp  translator_unit.cpp
src/builder/translators/declarations/: component.cpp  subprogram.cpp  type.cpp
src/builder/translators/design_units/: architecture.cpp  context.cpp  design_file.cpp  entity.cpp  package.cpp  package_body.cpp
src/builder/translators/expressions/: aggregate.cpp  allocator.cpp  attribute.cpp  binary.cpp  call.cpp  name.cpp  primary.cpp  qualified.cpp  slice.cpp  subtype.cpp  unary.cpp
src/builder/translators/statements/: waveform.cpp
src/builder/translators/types/: access.cpp  array.cpp  enumeration.cpp  file.cpp  record.cpp
src/builder/trivia/: trivia_binder.cpp  trivia_binder.hpp  utils.hpp
src/cli/: argument_parser.cpp  argument_parser.hpp  config_reader.cpp  config_reader.hpp
src/common/: CMakeLists.txt  config.hpp  logger.hpp  range_helpers.hpp  version.hpp.in
src/emit/: CMakeLists.txt  format.hpp  pretty_printer.hpp
src/emit/pretty_printer/: doc.cpp  doc.hpp  doc_impl.cpp  doc_impl.hpp  doc_utils.hpp  renderer.cpp  renderer.hpp  trivia.cpp  walker.hpp
src/emit/pretty_printer/algorithms/: alignment_resolver.cpp  alignment_resolver.hpp
src/emit/pretty_printer/nodes/: alignment.hpp  assignments.cpp  clauses.cpp  constraints.cpp  control_flow.cpp  declarations.cpp  design_file.cpp  design_units.cpp  expressions.cpp  process.cpp  statements.cpp  types.cpp
src/fmt/: concurrent.rs  declaration.rs  design.rs  expression.rs  interface.rs  mod.rs  name.rs  sequential.rs  subprogram.rs
tests/: .clang-tidy  CMakeLists.txt  comment_test.rs  common.rs  concurrent_test.rs  config_test.rs  declaration_test.rs  design_test.rs  expression_test.rs  interface_test.rs  name_test.rs  sequential_test.rs  subprogram_test.rs  test_helpers.hpp
tests/ast/: CMakeLists.txt  test_utils.hpp
tests/ast/nodes/: test_trivia.cpp
tests/ast/nodes/clauses/: test_context_clause.cpp  test_generic_clause.cpp  test_port_clause.cpp
tests/ast/nodes/constraints_ranges/: test_index_constraint.cpp  test_range_constraint.cpp
tests/ast/nodes/declarations/: decl_utils.hpp  test_alias_decl.cpp  test_attribute.cpp  test_component.cpp  test_constant.cpp  test_constant_decl.cpp  test_constraints.cpp  test_declarations.cpp  test_disconnect_spec.cpp  test_generic_param.cpp  test_group.cpp  test_impure_function.cpp  test_port.cpp  test_protected_type.cpp  test_signal.cpp  test_signal_decl.cpp  test_type.cpp  test_type_decl.cpp  test_variable.cpp
tests/ast/nodes/design_units/: test_architecture.cpp  test_comments.cpp  test_context.cpp  test_context_clauses.cpp  test_entity.cpp  test_interface_package.cpp  test_newlines.cpp  test_package.cpp  test_package_body.cpp  test_package_instantiation.cpp
tests/ast/nodes/expressions/: expr_utils.hpp  test_access_deref.cpp  test_aggregate.cpp  test_allocator.cpp  test_attribute.cpp  test_binary.cpp  test_binary_expr.cpp  test_call.cpp  test_call_expr.cpp  test_conditional.cpp  test_expressions.cpp  test_external_name.cpp  test_function_call.cpp  test_group.cpp  test_group_expr.cpp  test_helpers.hpp  test_matching_rel_ops.cpp  test_name.cpp  test_paren.cpp  test_paren_expr.cpp  test_physical.cpp  test_qualified.cpp  test_reduction_ops.cpp  test_slice.cpp  test_token.cpp  test_token_expr.cpp  test_unary.cpp  test_unary_expr.cpp
tests/ast/nodes/statements/: stmt_utils.hpp  test_block.cpp  test_case.cpp  test_case_generate.cpp  test_concurrent_assign.cpp  test_control_flow.cpp  test_for_loop.cpp  test_force_release.cpp  test_generate.cpp  test_if_generate_with_alternative.cpp  test_loop.cpp  test_process.cpp  test_selected_assign.cpp  test_sequential_assign.cpp  test_waveforms.cpp  test_while_loop.cpp
tests/ast/nodes/statements_concurrent/: test_concurrent_assign.cpp  test_conditional_assign.cpp  test_process.cpp  test_selected_assign.cpp
tests/ast/nodes/statements_sequential/: test_assert_statement.cpp  test_break_statement.cpp  test_case_statement.cpp  test_exit_statement.cpp  test_for_loop.cpp  test_if_statement.cpp  test_next_statement.cpp  test_null_statement.cpp  test_procedure_call_statement.cpp  test_report_statement.cpp  test_return_statement.cpp  test_sequential_assign.cpp  test_wait_statement.cpp  test_while_loop.cpp
tests/ast/nodes/type/: test_access.cpp  test_array.cpp  test_file.cpp  test_incomplete.cpp  test_record.cpp  type_utils.hpp
tests/ast/nodes/types/: test_access.cpp  test_array.cpp  test_enumeration.cpp  test_file.cpp  test_incomplete.cpp  test_record.cpp  type_utils.hpp
tests/benchmarks/: CMakeLists.txt  benchmarks.cpp
tests/cli/: test_argument_parser.cpp  test_config_reader.cpp
tests/data/vhdl/: big.vhd  other_big.vhd  simple.vhd
tests/emit/: CMakeLists.txt  test_utils.hpp
tests/emit/pretty_printer/: test_doc.cpp  test_optimizer.cpp  test_trivia.cpp
tests/emit/pretty_printer/nodes/: test_assignments.cpp  test_clauses.cpp  test_component.cpp  test_context_clauses.cpp  test_control_flow.cpp  test_declarations.cpp  test_type.cpp  (+4 more)
(+533 files in other folders)
