[package]
name = "vhdl-fmt"
version = "0.1.0"
edition = "2024"

[lints.rust]
warnings = "deny"
let_underscore_drop = "deny"
ambiguous_negative_literals = "deny"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
pretty = "0.12.5"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0.6"
vhdl_lang = "0.86.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
