[package]
name = "vhdl-fmt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
pretty = "0.12.5"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0.6"
vhdl_lang = "0.86.0"

[lints.clippy]
allow_attributes_without_reason = "deny"
assertions_on_result_states = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
doc_paragraphs_missing_punctuation = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
expect_used = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
# if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
infinite_loop = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
module_name_repetitions = "deny"
multiple_inherent_impl = "deny"
non_zero_suggestions = "deny"
nursery = { level = "deny", priority = -1 }
option_if_let_else = "allow"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pedantic = { level = "deny", priority = -1 }
precedence_bits = "deny"
rc_buffer = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
# shadow_reuse = "deny"
# shadow_same = "deny"
# shadow_unrelated = "deny"
tests_outside_test_module = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
unused_result_ok = "deny"

[lints.rust]
ambiguous_negative_literals = "deny"
let_underscore_drop = "deny"
warnings = "deny"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1
